welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:6: error: '(' expected but '{' found.
    }else if {speed>60 & speed<81}{
             ^caughtSpeeding:11: error: illegal start of simple expression
  }else {
  ^caughtSpeeding:14: error: '(' expected but '{' found.
    }else if {speed>65 & speed<86}{
             ^caughtSpeeding:20: error: illegal start of simple expression
  }
  ^